--- a/Wray_Tracker/Views/Tickets/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Tickets/Dashboard.cshtml
@@ -2,169 +2,162 @@
 @model Ticket
 
 
-<!-- Content Wrapper. Contains page content -->
 
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h2>Details for Ticket #@Model.Id</h2>
-                    <p>
-                        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class= "text-gray"}) |
-                        @Html.ActionLink("Back to List", "Index", null, new { @class= "text-gray"})
-                    </p>
-                </div>
-                <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="@Url.Action("Index", "Tickets")">Home</a></li>
-                        <li class="breadcrumb-item active">Ticket Dashboard</li>
-                    </ol>
-                </div>
-            </div>
-        </div><!-- /.container-fluid -->
-    </section>
-
-    <!-- Main content -->
-    <section class="content">
-
-        <!-- Default box -->
-        <div class="card card-navy">
-            <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-navy text-white">
-                <h3 class="card-header">@Html.DisplayFor(model => model.Title)</h3>
-            </div>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-12 col-md-12 col-lg-8 order-2 order-md-1">
+<!-- Main content -->
+<section class="content">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <!-- Default box -->
+                <div class="card">
+                    <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-navy text-white">
+                        <h5 class="mx-3 mt-2 mb-0">Details for Ticket #@Model.Id</h5>
+                        <p class="text-sm mx-sm-4">
+                            @Html.ActionLink("Edit |", "Edit", new { id = Model.Id }, new { @class = "text-gray" })
+                            @Html.ActionLink(" Back to List", "Index", null, new { @class = "text-gray" })
+                        </p>
+                    </div>
+                    <div class="card-body">
                         <div class="row">
-                            <div class="col-12 col-sm-4">
-                                <div class="info-box bg-gradient-light">
-                                    <div class="info-box-content">
-                                        <span class="info-box-number text-center">Developer</span>
-                                        @if (Model.Developer != null)
-                                        {
-                                            <span class="info-box-text text-center mb-0 text-muted">@Model.Developer.FullName</span>
-                                        }
-                                        else
-                                        {
-                                            <span class="info-box-text text-center mb-0 text-muted">@Model.DeveloperId</span>
-                                        }
+                            <div class="col">
+                                <div class="row">
+                                    <div class="col">
+                                        <h6 class="text-uppercase">Ticket Title</h6>
+                                        <p class="text-muted">@Model.Title</p>
+                                    </div>
+                                    <div class="col">
+                                        <h6 class="text-uppercase">Ticket Description</h6>
+                                        <p class="text-muted">@Model.Description</p>
+                                    </div>
+                                </div>
+                                <hr />
+                                <div class="row">
+                                    <div class="col-12 col-sm-4">
+                                        <div class="info-box bg-light">
+                                            <div class="info-box-content">
+                                                <span class="info-box-number text-center text-muted">Developer</span>
+                                                @if (Model.Developer != null)
+                                                {
+                                                    <span class="info-box-text text-center mb-0 text-muted">@Model.Developer.FullName</span>
+                                                }
+                                                else
+                                                {
+                                                    <span class="info-box-text text-center mb-0 text-muted">@Model.DeveloperId</span>
+                                                }
 
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-4">
-                                <div class="info-box bg-light">
-                                    <div class="info-box-content">
-                                        <span class="info-box-text text-center text-muted">Total amount spent</span>
-                                        <span class="info-box-number text-center text-muted mb-0">2000</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-sm-4">
-                                <div class="info-box bg-light">
-                                    <div class="info-box-content">
-                                        <span class="info-box-text text-center text-muted">Estimated project duration</span>
-                                        <span class="info-box-number text-center text-muted mb-0">20 </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <h4>Comments</h4>
-                                @foreach (var comment in Model.Comments)
-                                {
-                                    <div class="post">
-                                        <div class="user-block">
-                                            <img class="img-circle img-bordered-sm" src="~/Images/user.svg" alt="user image">
-                                            <span class="username">
-                                                @comment.User.FullName
-                                            </span>
-                                            <span class="description">
-                                                @comment.Created.ToString("MMM dd, yyyy")
-                                            </span>
+                                            </div>
                                         </div>
-
-                                        <!-- /.user-block -->
-                                        <div>
-                                            <p>
-                                                @Html.Raw(comment.Body)
-                                            </p>
-
-                                            @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+                                    </div>
+                                    <div class="col-12 col-sm-4">
+                                        <div class="info-box bg-light">
+                                            <div class="info-box-content">
+                                                <span class="info-box-number text-center text-muted">Submitter</span>
+                                                <span class="info-box-text text-center text-muted mb-0">@Html.DisplayFor(model => model.Submitter.FullName)</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-sm-4">
+                                        <div class="info-box bg-light">
+                                            <div class="info-box-content">
+                                                <span class="info-box-number text-center text-muted">Created</span>
+                                                <span class="info-box-text text-center text-muted mb-0">@Model.Created.ToString("MMM dd, yyyy")</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr />
+                                <br />
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="card">
+                                            <div class="mx-3 mt-n2 elevation-2 bg-gradient-navy">
+                                                <h5 class="mx-3 mt-2 mb-0">Ticket Comments</h5>
+                                                <p class="text-sm mx-sm-4">All Comments for this Ticket</p>
+                                            </div>
+                                            @foreach (var comment in Model.Comments)
                                             {
-                                                <div>
-                                                    <button type="submit" class="btn btn-xs bg-gradient-danger">Delete</button>
+                                                <div class="card-body">
+                                                    <div class="post">
+                                                        <div class="user-block">
+                                                            <img class="img-circle img-bordered-sm" src="~/Images/user.svg" alt="user image">
+                                                            <span class="username">
+                                                                @comment.User.FullName
+                                                            </span>
+                                                            <span class="description">
+                                                                @comment.Created.ToString("MMM dd, yyyy")
+                                                            </span>
+                                                        </div>
+
+                                                        <!-- /.user-block -->
+                                                        <div>
+                                                            <p>
+                                                                @Html.Raw(comment.Body)
+                                                            </p>
+                                                            <hr />
+                                                        </div>
+
+                                                    </div>
                                                 </div>
                                             }
+                                            <div class="card-footer">
+
+                                                @if (User.Identity.IsAuthenticated)
+                                                {
+                                                    using (Html.BeginForm("Create", "TicketComments", FormMethod.Post, null))
+                                                    {
+                                                        @Html.AntiForgeryToken()
+                                                        @Html.Hidden("TicketId", Model.Id)
+                                                        @Html.HiddenFor(model => model.Id)
+                                                        <div class="input-group">
+                                                            @*@Html.TextArea("CommentBody")*@
+                                                            <input type="text" name="commentBody" placeholder="Type Message ..." class="form-control">
+                                                            <span class="input-group-append">
+                                                                <button type="submit" class="btn btn-sm bg-gradient-orange text-white">Add Comment</button>
+                                                            </span>
+                                                            @*<button type="submit" class="btn btn-sm bg-gradient-orange text-white">Add Comment</button>*@
+                                                        </div>
+                                                    }
+                                                }
+                                            </div>
                                         </div>
+                                    </div>
 
+                                    <div class="col">
+                                        <div class="card">
+                                            <div class="mx-3 mt-n2 elevation-2 bg-gradient-navy">
+                                                <h5 class="mx-3 mt-2 mb-0">Ticket Attachments</h5>
+                                                <p class="text-sm mx-sm-4">All Attachments for this Ticket</p>
+                                            </div>
+                                            <div class="card-body">
+                                                <h5 class="text-muted">Attachments</h5>
+                                                <input type="file" class="small" name="newAttachment" /><br /><hr />
+                                                @foreach (var attachment in Model.Attachments)
+                                                {
+                                                    <ul class="list-unstyled">
+                                                        <li>
+                                                            <a target="_blank" href="@Url.Content(attachment.FilePath)" class="btn-link text-secondary"><i class="far fa-fw fa-file"></i>@attachment.FilePath</a>
+                                                        </li>
+                                                    </ul>
+                                                }
+
+                                                @using (Html.BeginForm("Create", "TicketAttachments", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                                                {
+                                                    @Html.AntiForgeryToken()
+                                                    @Html.Hidden("TicketId", Model.Id)
+                                                    <button type="submit" class="btn btn-sm bg-gradient-orange text-white offset-10">Add Files</button>
+                                                }
+                                            </div>
+                                        </div>
                                     </div>
-                                }
-                            </div>
-                            
-                            <div class="col-12">
-                                
-                                @if (User.Identity.IsAuthenticated)
-                                {
-                                    using (Html.BeginForm("Create", "TicketComments", FormMethod.Post, null))
-                                    {
-                                        @Html.AntiForgeryToken()
-                                        @Html.Hidden("TicketId", Model.Id)
-                                        @Html.HiddenFor(model => model.Id)
-                                    <div>
-                                        <br />
-                                        @Html.TextArea("CommentBody")
-                                        <br />
-                                        <button type="submit" class="btn btn-sm bg-gradient-orange text-white">Add Comment</button>
-                                    </div>
-                                    }
-                                }
+                                </div>
                             </div>
                         </div>
+                        <!-- /.card-body -->
                     </div>
-                    <div class="col-12 col-md-12 col-lg-4 order-1 order-md-2">
-                        <h4 class="text-gray-dark"><i class="fas fa-user-alt"></i> @Html.DisplayFor(model => model.Submitter.FullName)</h4>
-                        <hr />
-                        <p class="text-muted">@Html.DisplayFor(model => model.Description)</p>
-                        <br>
-                        <div class="text-muted">
-                            <p class="text-sm">
-                                Ticket Creation Date
-                                <b class="d-block">@Model.Created.ToString("MMM dd, yyyy")</b>
-                            </p>
-                        </div>
-
-                        <h5 class="mt-5 text-muted">Attachments</h5>
-                        <input type="file" class="small" name="newAttachment" /><br /><hr />
-                        @foreach (var attachment in Model.Attachments)
-                        {
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a target="_blank" href="@Url.Content(attachment.FilePath)" class="btn-link text-secondary"><i class="far fa-fw fa-file"></i>@attachment.FilePath</a>
-                                </li>
-
-                            </ul>
-                        }
-
-                        @using (Html.BeginForm("Create", "TicketAttachments", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            @Html.Hidden("TicketId", Model.Id)
-                            <div class="text-center mt-5 mb-3">
-
-                                <button type="submit" class="btn btn-sm bg-gradient-orange text-white">Add Files</button>
-
-                            </div>
-                        }
-                    </div>
+                    <!-- /.card -->
                 </div>
             </div>
-            <!-- /.card-body -->
         </div>
-        <!-- /.card -->
-
-    </section>
-    <!-- /.content -->
-
+    </div>
+</section>
+<!-- /.content -->
